Polish Phase 2 complete: setup guides (4 files)
Polished all remaining setup guides following succinct style.

Changes:
- gradle-plugin.md (423→294 lines, -30%)
  - Consolidated configuration properties
  - Removed redundant explanations
  - Simplified project type examples

- kmp-junit5.md (457→286 lines, -37%)
  - Condensed expect/actual pattern examples
  - Removed platform-specific test examples
  - Simplified exception handling section

- jvm-junit4.md (454→287 lines, -37%)
  - Removed HTTP client testing section
  - Removed JUnit 4 vs 5 comparison
  - Linked to client guides instead

- jvm-junit5.md (364→268 lines, -26%)
  - Removed HTTP client testing examples
  - Condensed configuration sections
  - Linked to client guides

Total Phase 2 reduction: 520 lines removed

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>